--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -344,10 +344,10 @@
 	\section{Today's Crowd-Sourcing Methods and GDPR} \label{juxtaposition}
 	\startsection
 		Generally, today's crowd-sourcing methods are GDPR-conform and can still be carried out as before. \\
-		However, there are some critical and tricky points that need to be considered when a government or service provider wants to use a certain crowd-sourcing method. \\
-		First of all, it must be ensured that the "Right to Restriction" and the "Right to Object" are respected, as there must be an option to prevent the data processing of a certain individual. For example due to the high-quality cameras that are available for tracking purposes, such as traffic flow surveillance, public spaces which are not part of the actual video scanning can be intruded and people which are staying in these spaces can be recognized due to the progress in facial recognition algorithms. \\
-		Other precarious rights are the "Right to Access" and the "Right to Data Portability" such that apps, which were not developed by the government but by individuals, do not grant easy access to the data which were gathered and therefore are not in compliance with GDPR. Additionally, such cases can be very difficult to enforce if the service provider's location is either outside of the European Union or can not be clearly identified. \\
-		For most of the crowd-sourcing methods the "Right to Erasure" can be neglected, because most of these are used to achieve a goal of public interest therefore nullifying the associated paragraph.
+		However, some critical and tricky points that need to be considered when a government or service provider wants to use a certain crowd-sourcing method. \\
+		First of all, it must be ensured that the "Right to Restriction" and the "Right to Object" are respected, as there must be an option to prevent the data processing of a certain individual. For example, due to the high-quality cameras that are available for tracking purposes, such as traffic flow surveillance, public spaces which are not part of the actual video scanning can be intruded and people which are staying in these spaces can be recognized due to the progress in facial recognition algorithms. \\
+		Other precarious rights are the "Right to Access" and the "Right to Data Portability" such that apps, which were not developed by the government but by individuals, do not grant easy access to the data which were gathered and therefore are not in compliance with GDPR. Additionally, such cases can be very difficult to enforce if the service provider's location is either outside of the European Union or can not be identified. \\
+		For most of the crowd-sourcing methods the "Right to Erasure" can be neglected, because most of these are used to achieve a goal of public interest, therefore, nullifying the associated paragraph.
 	\closesection
 	
 	\section{Guidelines and Design Principles}
@@ -367,32 +367,32 @@
 	\closesection
 	
 	\hfill \\
-	\noindent The idea of GDPR is to give users back the power over their own information and data and decide when it is used. Also because the use of data has become highly technical, obscure and unpredictable the concepts of consent which are the underlying base of the privacy rights are not meaningful as tracking the data in the world wide web and other services is very difficult. Another idea emerged in 2018 in the paper "A Blueprint for a Better Digital Society" by Jaron Lanier and E. Glen Weyl of "Data Dignity":
+	\noindent The idea of GDPR is to give users back the power over their own information and data and decide when it is used. Also because the use of data has become highly technical, obscure, and unpredictable the concepts of consent which are the underlying base of the privacy rights are not meaningful as tracking the data in the world wide web and other services are very difficult. Another idea emerged in 2018 in the paper "A Blueprint for a Better Digital Society" by Jaron Lanier and E. Glen Weyl of "Data Dignity":
 	
 	\section[Data Dignity]{Data Dignity \cite{LanierWeylBlueprint}}
 	\startsection
-		In todays' world few gigantic tech firms like Alphabet or Facebook have become so powerful that they are able to use their platforms, like YouTube, to control what content will be consumed or who does get paid for the generation of the media/data. Lanier and Weyl compare this to communism in which a central planner makes analogous decisions. An idea to oppose this scheme is to create a business model in which data creators will directly trade their generated data to tech firms and other services that want to use this data for training machine learning algorithms or to draw conclusions for new advertisement campaigns, the so called "Data Dignity". \\
+		In todays' world, few gigantic tech firms like Alphabet or Facebook have become so powerful that they are able to use their platforms, like YouTube, to control what content will be consumed or who does get paid for the generation of the media/data. Lanier and Weyl compare this to communism in which a central planner makes analogous decisions. An idea to oppose this scheme is to create a business model in which data creators will directly trade their generated data to tech firms and other services that want to use this data for training machine learning algorithms or to draw conclusions for new advertisement campaigns, the so-called "Data Dignity". \\
 		The idea behind "Data Dignity" is to create a coherent marketplace for people's data in which people are getting paid for the data they generate and have to pay if they want to use services that need this data. A benefit of this is that platforms will receive higher-quality data and therefore being able to create higher-quality services with which a greater revenue can be achieved. \\
-		In order to enforce data dignity Lanier and Weyl suggest the use of "Mediators of Individual Data", so called MIDs, because tech firms or individuals alone would not be able to make this kind of change as for tech giants too many conflicts of interests do exists and the complexity of the digital economy does not allow the in detail regulation. These MIDs are intermediary groups which will negotiate with service providers that need data about the value of data and the wages and data royalties of them and will perform payment duties, so the individual that generated the data gets paid acoordingly. They are representatives of a group of people, like corporations or labor and consumer unions, which will promote its own standards and qualities. MIDs can be really different from another based on the members that they represent or which interests are of the most value for them. It is also possible that for some of the MIDs not everyone is allowed to or it is really hard to join them, based on the data they are handling. However, all of the MIDs should in some way implement the following eight principles:
+		In order to enforce data dignity Lanier and Weyl suggest the use of "Mediators of Individual Data", so-called MIDs, because tech firms or individuals alone would not be able to make this kind of change as for tech giants too many conflicts of interests do exist and the complexity of the digital economy does not allow the in detail regulation. These MIDs are intermediary groups that will negotiate with service providers that need data about the value of data and the wages and data royalties of them and will perform payment duties, so the individual that generated the data gets paid accordingly. They are representatives of a group of people, like corporations or labor and consumer unions, which will promote their own standards and qualities. MIDs can be really different from each other based on the members that they represent or which interests are of the most value for them. It is also possible that for some of the MIDs not everyone is allowed to or it is really hard to join them, based on the data they are handling. However, all of the MIDs should in some way implement the following eight principles:
 		\begin{enumerate}[(i)]
 			\item \textit{Fiduciary Duty} \\
-			An MID should be a trustee for individuals that create data. The data from the user's should therefore be measured in a legal, economic, and structural sense.
+			An MID should be a trustee for individuals that create data. The data from the users should therefore be measured in a legal, economic, and structural sense.
 			\item \textit{Quality Standards} \\
 			Each MID can individually define quality standards, enforce and foster them in regards to decency, accountability, and acknowledged achievements.
 			\item \textit{Inalienable Provenance} \\
-			An MID should handle the buy- and sell-procedure of data to service provider, but should also ensure that the data is only used for the specific processes and not be either permanently sold or the use is alienated beyond recognition.
+			An MID should handle the buy- and sell-procedure of data to a service provider, but should also ensure that the data is only used for the specific processes and not be either permanently sold or the use is alienated beyond recognition.
 			\item \textit{Benefit Sharing} \\
 			Each MID should ensure that most of the benefit (approximately 70\%) is given back to the creators. This may need a regulatory layer in the whole system in order to guarantee this.
 			\item \textit{Competence and Professionalism} \\
 			An MID should have an expertized management such that it can be entrusted by the data creators to competently and in a position of parity negotiate with data customers and service providers.
 			\item \textit{Biological Realism} \\
-			A user should not be compensated based on quantitative, ideal measures but on the needs of the user which can change with age and time. An MID should encourage its data creators to build up a "portfolio" of data royalties over their life time in order to gain some revenue after retirement.
+			A user should not be compensated based on quantitative, ideal measures but on the needs of the user which can change with age and time. An MID should encourage its data creators to build up a "portfolio" of data royalties over their lifetime in order to gain some revenue after retirement.
 			\item \textit{Cognitive Realism} \\
-			An MID should be easy to understand and not come with long terms and conditions or complex consent giving processes, like it is the case in today's world.
+			An MID should be easy to understand and not come with long terms and conditions or complex consent-giving processes as is the case in today's world.
 			\item \textit{Longevity} \\
-			An MID should not be a short-lived venture, but a long-lasting, intergenerational intermediary for wisdom and data. Also MIDs should create a relationships among themselves, like MIDs for nurses with MIDs for biological scientists, in order to create a network of exchange and research.
+			An MID should not be a short-lived venture, but a long-lasting, intergenerational intermediary for wisdom and data. Also, MIDs should create a relationships among themselves, like MIDs for nurses with MIDs for biological scientists, in order to create a network of exchange and research.
 		\end{enumerate}
-		This idea is much more systemic and future oriented than the introduction of privacy regulations in respect to not being able to prevent even more innovative privacy regulations by directly involving individuals in this topic so they realize the benefits of reasonable limitations on what efforts are demanded of them, fair compensation for what information they reveal about themselves among other abilities. Weyl and Lanier abstractly call this "the right to be left alone".
+		This idea is much more systemic and future-oriented than the introduction of privacy regulations in respect to not being able to prevent even more innovative privacy regulations by directly involving individuals in this topic so they realize the benefits of reasonable limitations on what efforts are demanded of them, fair compensation for what information they reveal about themselves among other abilities. Weyl and Lanier abstractly call this "the right to be left alone".
 	\closesection
 	
 	
